Fix Airflow install.
- Force install of Pandas 0.22.0 for Python 2.x support.
- Force install of Flask 1.0.3 for Airflow breakage.
- Move airflow program to .airflow and place shell wrapper at airflow
filename.
- Add airflow-cm.sh wrapper and install mkuser.py.
- Do not let meta/airflow_env.sh set AIRFLOW_HOME.
- Create /etc/airflow/conf.dist.

--- a/docker/centos6/Dockerfile
+++ b/docker/centos6/Dockerfile
@@ -63,7 +63,7 @@ RUN PYVER=$(echo $PYTHON_VERSION | awk -F. '{print $1"."$2}') && \
         -e "s|PYVER|${PYVER}|" \
         -i ${INSTALL_DIR}/${PARCEL_NAME}/meta/airflow_env.sh
 
-COPY docker/modify_buildroot.sh /BUILD/
+COPY docker/modify_buildroot.sh docker/mkuser.py /BUILD/
 RUN bash -x /BUILD/modify_buildroot.sh
 
 RUN cd ${INSTALL_DIR} && \
