pg_config included in path

--- a/docker/centos6/Dockerfile
+++ b/docker/centos6/Dockerfile
@@ -7,8 +7,10 @@ ENV INSTALL_DIR /opt/cloudera/parcels
 
 WORKDIR /BUILD
 
+RUN yum -y -e1 -d1 install https://download.postgresql.org/pub/repos/yum/reporpms/EL-6-x86_64/pgdg-redhat-repo-latest.noarch.rpm
+
 #RUN yum -y -e1 -d1 update
-RUN yum -y -e1 -d1 groupinstall "development tools"
+RUN yum -y -e1 -d1 groupinstall "Development Tools"
 RUN yum -y -e1 -d1 install readline-devel \
                            tk-devel \
                            gdbm-devel \
@@ -24,7 +26,11 @@ RUN yum -y -e1 -d1 install readline-devel \
                            sqlite-devel \
                            cyrus-sasl-devel.x86_64 \
                            mysql-devel \
-                           postgresql-devel
+                           libpqxx-devel \
+                           gcc \
+                           postgresql94
+
+ENV PATH=$PATH:/usr/pgsql-9.4/bin                   
 
 ARG AIRFLOW_VERSION
 ENV AIRFLOW_VERSION ${AIRFLOW_VERSION:-1.10.0}
